--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
-    <title>Web POS - Ina Baby & Kids </title>
+    <title>Web POS - Ina Baby &amp; Kids </title>
 </head>
 <body>
-
     <h1>Selamat Datang</h1>
-
     <div style="width: 100%; height: 100%; background: #F4F4F4"></div>
-
 </body>
 </html>
