--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <title>Web POS - Ina Baby &amp; Kids </title>
+    <title>Web POS - Ina Baby & Kids</title>
 </head>
 <body>
     <h1>Selamat Datang</h1>
-    <div style="width: 100%; height: 100%; background: #F4F4F4"></div>
+    <div style="width: 100vw; height: 100vh; background: #F4F4F4; display: block;"></div>
 </body>
 </html>
