--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
 
         <footer>
            <span class="footer-text"> &copy; 2024 Ina Baby &amp; Kids</span>
-        </footer>   
+        </footer>
+
+        <script src="index.js"></script>
+        
     </body>
     </html>
