--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <title>Login Page</title>
+    <title>Web POS - Login Page</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
     <style>
         body {
