--- a/login.html
+++ b/login.html
@@ -64,8 +64,8 @@
     <script>
         function validateLogin() {
             // Ambil data dari Google Sheets API
-            const apiKey = 'AIzaSyBKTs08rp18jacSVRdE1HGpgHAdGyqBXkQ';
-            const spreadsheetId = '1F5voYTnm3e-1h3iulQf4TXdHi9__u6WJTQe15l_haZ0';
+            const apiKey = '<AIzaSyBKTs08rp18jacSVRdE1HGpgHAdGyqBXkQ>';
+            const spreadsheetId = '<1F5voYTnm3e-1h3iulQf4TXdHi9__u6WJTQe15l_haZ0>';
             const range = 'Sheet1!A1:B20';
 
             const apiUrl = `https://sheets.googleapis.com/v4/spreadsheets/${1F5voYTnm3e-1h3iulQf4TXdHi9__u6WJTQe15l_haZ0}/values/${Sheet1!A1:B20}?key=${AIzaSyBKTs08rp18jacSVRdE1HGpgHAdGyqBXkQ}`;
