--- a/login.html
+++ b/login.html
@@ -54,7 +54,7 @@
 
 <body>
 
-    <form onsubmit="return validateLogin()">
+    <form onsubmit="return validateLogin(event)">
         <h1>Web POS</h1>
         <div class="textbox-container"><input type="text" id="username" name="username" placeholder="Username" required></div>
         <div class="textbox-container"><input type="password" id="password" name="password" placeholder="Password" required></div>
@@ -62,6 +62,6 @@
     </form>
 
     <script src="login.js"></script>
-    
+
 </body>
 </html>
