--- a/index.html
+++ b/index.html
@@ -57,6 +57,18 @@
                 font-family: Nunito;
             }
 
+            #logoutButton{
+            font-size: 16px;
+            font-family: Nunito;
+            width: 80px;
+            height: 30px;
+            border: 0.1px solid #ccc;
+            border-radius: 8px;
+            background-color: #f2f2f2;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
             #tanggal,
             #kasir,
             #pembayaran {
@@ -84,6 +96,10 @@
 
             .margin-heading{
                 margin-bottom: 10px;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                padding: 10px; 
             }
      
 
@@ -92,7 +108,9 @@
 
     <body>
         <main>
-            <div class="margin-heading"><h1 class="judul-h1">Web POS - Ina Baby & Kids</h1></div>
+            <div class="margin-heading"><h1 class="judul-h1">Web POS - Ina Baby & Kids</h1>         
+                <button id="logoutButton" type="submit" class="button">Logout</button>
+            </div>
           
             <div class="textbox-container">
                 <input type="text" class="textbox-font" id="kasir" name="kasir" placeholder="Kasir">
